# StrongtypesTesting

./: CMakeLists.txt  README.md  build-and-test.sh
cmake/: DownloadCatch2.cmake
include/: CMakeLists.txt
include/my_lib/: geom.hpp
tests_catch2/: CMakeLists.txt  geom.cpp
